# vixen

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  REVIEW.md  book.toml  deny.toml  hk.pkl  justfile  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml  pages.yml
benches/: README.md
build-aux/: README.md  cargo-sources.json  generate-cargo-sources.py  org.vixen.Vixen.json  write-vendor-checksums.py
crates/vixen-api/: Cargo.toml
crates/vixen-api/src/: browser.rs  ids.rs  lib.rs
crates/vixen-api/src/render/: broker.rs  commit.rs  mod.rs  source.rs
crates/vixen-cdp/: Cargo.toml
crates/vixen-cdp/src/: lib.rs
crates/vixen-core/: Cargo.toml
crates/vixen-core/src/: angle.rs  background_position.rs  border_radius.rs  box_model.rs  calc.rs  class_list.rs  data_url.rs  dataset.rs  date_units.rs  doc.rs  easing.rs  engine_error.rs  flex_resolve.rs  form_submission.rs  gradient.rs  length.rs  lib.rs  media_query.rs  microsyntax.rs  mime.rs  placeholder.rs  ratio.rs  resolution.rs  script.rs  source_size.rs  srcset.rs  stacking_context.rs  time.rs  transform.rs  url_search_params.rs
crates/vixen-engine/: Cargo.toml
crates/vixen-engine/src/: abort.rs  animation.rs  blend.rs  border_image.rs  box_model.rs  box_shadow.rs  browser.rs  calc.rs  class_list.rs  clip_path.rs  color.rs  conic_gradient.rs  counter.rs  data_url.rs  dataset.rs  display_list.rs  doc.rs  easing.rs  engine_error.rs  event_path.rs  filter.rs  form_submission.rs  forms.rs  geometry.rs  gradient.rs  grid_resolve.rs  headers.rs  high_res_time.rs  history.rs  html_serialize.rs  http_cache.rs  layout_tree.rs  length.rs  lib.rs  line_layout.rs  list_marker.rs  mask.rs  media_query.rs  message_port.rs  mime.rs  (+24 more)
crates/vixen-engine/src/layout_tree/: build.rs  dump.rs  flow.rs  fragments.rs  style.rs
crates/vixen-engine/src/page/: interaction.rs
crates/vixen-engine/src/script/: cssom.rs  dom.rs  encoding.rs  import_maps.rs  module_loader.rs  runtime.rs  webapi.rs  webidl.rs
crates/vixen-engine/src/style_cascade/: conditions.rs
crates/vixen-ffi/: Cargo.toml
crates/vixen-ffi/include/: vixen.h
crates/vixen-ffi/src/: c_abi.rs  c_frame.rs  c_renderer.rs  cdp_host.rs  frame.rs  lib.rs  render_wire.rs  renderer_broker.rs  sync_renderer.rs
crates/vixen-ffi/src/c_abi/: frame_tests.rs
crates/vixen-ffi/tests/: header_smoke.c
crates/vixen-ffi/tests/fixtures/: frame.html
crates/vixen-headless/: Cargo.toml
crates/vixen-headless/src/: browser_adapter.rs  cdp.rs  interactions.rs  lib.rs  main.rs  placeholder.rs  surface.rs
crates/vixen-headless/tests/: cdp_runtime.rs  incremental.rs  wpt_profile_runner.rs  wpt_runner.rs
crates/vixen-headless/tests/fixtures/: incremental.html
crates/vixen-headless/tests/support/: mod.rs
crates/vixen-net/: Cargo.toml
crates/vixen-net/src/: coep.rs  cookie.rs  coop.rs  corp.rs  cors.rs  csp.rs  fetch_types.rs  http_helpers.rs  integrity.rs  lib.rs  mixed_content.rs  network.rs  nosniff.rs  origin.rs  permissions.rs  permissions_policy.rs  referrer_policy.rs  sandboxing.rs  sec_fetch.rs  site.rs  strict_transport_security.rs  trusted_types.rs  url_policy.rs  websocket.rs
crates/vixen-shell/: Cargo.toml
crates/vixen-shell/src/: address.rs  app.rs  browser_adapter.rs  engine_worker.rs  lib.rs  profile.rs  surface.rs  tab.rs
crates/vixen-store/: Cargo.toml
crates/vixen-store/src/: lib.rs
crates/vixen-wpt/: Cargo.toml
crates/vixen-wpt/src/: check.rs  harness.rs  lib.rs  manifest.rs  profile.rs  visual_hash.rs
data/: README.md  dev.adonm.vixen.metainfo.xml  org.vixen.Vixen.desktop  org.vixen.Vixen.metainfo.xml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  AUTONOMOUS_WORK.md  BASELINES.md  CDP_PLAYWRIGHT_SMOKE.md  COMPAT.md  DECISIONS.md  DEVELOPMENT.md  FLUTTER_SHELL.md  MILESTONES.md  PLAN.md  PROJECT_DIRECTION.md  REFERENCES.md  ROADMAP.md  RUNTIME_WEB_PLATFORM.md  SPEC.md  SUMMARY.md  index.md
docs/baselines/: flutter-linux-renderer-2026-07-16.json  flutter-linux-renderer-hardware-2026-07-16.json  flutter-linux-x64-raw-2026-07-12.json  flutter-linux-x64-raw-2026-07-16.json  profile-growth-2026-07-16.json
docs/guidance/: README.md  cargo-home.md  deno-core.md  flatpark-release.md  gnome-sdk-flatpak-builder.md  mise.md  mozjs.md
fixtures/: README.md  manifest.json
fixtures/artifact-size/: README.md
fixtures/cdp/: module-dependency.js  module-dynamic.js  playwright-next.html  playwright-smoke.html
fixtures/css/: animations.html  blend-modes.html  border-image.html  box-model.html  clip-mask.html  combinators.html  computed-advanced.html  computed-cascade.html  computed-inline.html  external-stylesheet.css  external-stylesheet.html  filters.html  grid-tracks.html  multicol.html  paint-geometry.html  scroll-snap.html  selectors.html  transforms.html  writing-modes.html
fixtures/dom/: anchors.html  basic.html  canvas.html  class-list.html  construction-serialization.html  dataset.html  dialog-details.html  history.html  html-element-attrs.html  media.html  messaging.html  mutation-observer.html  offscreen-canvas.html  platform-apis.html  progress-meter.html  range-selection.html  reflected-misc.html  resources.html  shadow-root.html  sizes.html  srcset.html  table-collections.html  template-slot.html  text-tracks.html  traversal.html
fixtures/events/: focus-order.html  linux-interaction-qa.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cookie_set_cookie.rs  csp_parse.rs  html5ever_parse.rs  url_policy_validate.rs
scripts/: artifact-size.mjs  baseline-common.mjs  baseline-common.test.mjs  check-vixen-deps.py  docker-flutter.sh  flutter-artifact-size.mjs  flutter-artifact-size.test.mjs  flutter-at-spi-smoke.py  flutter-automation-smoke.py  flutter-fixture-manifest.mjs  flutter-interaction-smoke.py  flutter-linux-baseline.mjs  flutter-linux-baseline.test.mjs  headless-baseline.mjs  package-linux-release.py  playwright-cdp-smoke.mjs  playwright-flutter-cdp-smoke.mjs  prepare-flutter-gtk4.py  profile-growth-baseline.mjs  test_flutter_interaction_smoke.py  wayland-virtual-pointer.c
src/: main.rs
(+291 files in other folders)
