# Vixen workspace + GUI binary crate.
#
# Layout per docs/ARCHITECTURE.md. The seven engine/library crates live under
# `crates/`; the thin GUI binary lives at `src/main.rs` and delegates to
# `vixen_shell::run()` (ADR-010).
#
# Stable target dependency direction (docs/ARCHITECTURE.md, ADR-017):
#
#                      vixen-api (contracts only)
#                           ▲
#          ┌────────────────┼────────────────┐
#          │                │                │
#     vixen-shell      vixen-engine      vixen-wpt
#                           │
#                     ┌─────┴─────┐
#                     ▼           ▼
#                 vixen-net   vixen-store
#
# `vixen-headless` is a CLI/CDP composition root over vixen-api + vixen-engine
# (and a dev-dependency on vixen-wpt). The current shell and headless direct
# composition edges are explicit migration exceptions until BrowserCore lands;
# `just gate-architecture` enforces the stable leaf boundaries today and will
# tighten as ADR-017 removes those exceptions.

[workspace]
resolver = "2"
members = [
    "crates/vixen-api",
    "crates/vixen-net",
    "crates/vixen-store",
    "crates/vixen-engine",
    "crates/vixen-shell",
    "crates/vixen-wpt",
    "crates/vixen-headless",
]
default-members = ["crates/vixen-api", "crates/vixen-net", "crates/vixen-store"]

# GUI binary (thin; calls vixen_shell::run()).
[package]
name = "vixen"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"   # let-chains used in vixen-net per docs/SPEC.md
description = "A focused modern-Linux browser built for capability per byte"
license = "Apache-2.0"
publish = false

[dependencies]
vixen-shell = { path = "crates/vixen-shell", default-features = false }

# Carry the optimised release profile forward unchanged
# (docs/ARCHITECTURE.md "Build profile"). `panic = "abort"` is release-only
# so the dev/test profile keeps unwinding for assertions.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

# `lto = "fat"` may be tried as a one-off size experiment; revert if the
# compile-time cost is unacceptable (docs/ARCHITECTURE.md).
[profile.release-perf]
inherits = "release"
lto = "fat"
