# Vixen Rust workspace. Rendered GUI applications live under `flutter/` and
# reach BrowserCore only through `vixen-ffi`; Rust composition roots are
# headless/CDP and test adapters.
#
# Layout per docs/ARCHITECTURE.md. The engine, adapters, and Rust-only Flutter
# controller live under `crates/`.
#
# Stable target dependency direction (docs/ARCHITECTURE.md, ADR-017):
#
#                      vixen-api (contracts only)
#                           ▲
#                  ┌────────┼─────────────────────────┐
#                  │        │                         │
#             vixen-engine  │            vixen-wpt / vixen-ffi
#                           │
#                     ┌─────┴─────┐
#                     ▼           ▼
#                 vixen-net   vixen-store
#
# `vixen-headless` is a CLI/CDP composition root over vixen-api + vixen-engine
# (and a dev-dependency on vixen-wpt). Shell and headless route through
# BrowserCore; `just gate-architecture` enforces both stable leaf boundaries and
# the frontend ban on direct leaf-crate composition.

[workspace]
resolver = "2"
members = [
    "crates/vixen-api",
    "crates/vixen-net",
    "crates/vixen-store",
    "crates/vixen-engine",
    "crates/vixen-wpt",
    "crates/vixen-headless",
    "crates/vixen-ffi",
]
default-members = ["crates/vixen-api", "crates/vixen-net", "crates/vixen-store"]

# Carry the optimised release profile forward unchanged
# (docs/ARCHITECTURE.md "Build profile"). `panic = "abort"` is release-only
# so the dev/test profile keeps unwinding for assertions.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

# `lto = "fat"` may be tried as a one-off size experiment; revert if the
# compile-time cost is unacceptable (docs/ARCHITECTURE.md).
[profile.release-perf]
inherits = "release"
lto = "fat"
