# vixen-core — engine integration glue (Stylo + mozjs + layout + paint).
# Phase 2 adds the SpiderMonkey runtime (mozjs). mozjs downloads a prebuilt
# static SpiderMonkey by default — see docs/guidance/mozjs.md.
[package]
name = "vixen-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Vixen engine integration glue"
license = "Apache-2.0"
publish = false

[dependencies]
vixen-api = { path = "../vixen-api" }
mozjs = "0.16"
thiserror = "2"

[lib]
path = "src/lib.rs"
