# vixen-engine — engine integration glue (Stylo + mozjs + layout + paint).
# Phase 2 adds the SpiderMonkey runtime (mozjs). mozjs downloads a prebuilt
# static SpiderMonkey by default — see docs/guidance/mozjs.md.
[package]
name = "vixen-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Vixen engine integration glue"
license = "Apache-2.0"
publish = false

[dependencies]
vixen-api = { path = "../vixen-api" }
vixen-net = { path = "../vixen-net" }
mozjs = "0.16"
thiserror = "2"
html5ever = "0.39"
markup5ever = "0.39"
markup5ever_rcdom = "0.39"
tendril = "0.5"
url = "2"
# Base64 (RFC 4648 § 4) decoding of `data:` URL base64 payloads in `data_url`.
# Pure-Rust, `unsafe`-free, compatible with `#![forbid(unsafe_code)]`.
base64 = "0.22"

# Stylo CSS engine (Phase 3, docs/PLAN.md). The `servo` feature selects the
# non-Gecko config; it brings in the web_atoms/string_cache atom sets and
# the servo-flavoured `SelectorImpl`. `selectors`, `stylo_atoms` are direct
# deps because we name them in style_dom.rs.
stylo = { version = "0.18", default-features = false, features = ["servo"] }
stylo_atoms = "0.18"
selectors = "0.38"

[lib]
path = "src/lib.rs"

[dev-dependencies]
url = "2"
