# vixen-engine — engine integration glue (Stylo + JS runtime + layout + paint).
# ADR-014 uses deno_core/V8 directly behind vixen-engine::script's product seam.
[package]
name = "vixen-engine"
version = "0.1.5"
edition = "2024"
rust-version = "1.88"
description = "Vixen engine integration glue"
license = "Apache-2.0"
publish = false

[dependencies]
vixen-api = { path = "../vixen-api" }
vixen-net = { path = "../vixen-net" }
vixen-store = { path = "../vixen-store" }
deno_core = "0.406.0"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "net", "rt-multi-thread", "sync", "time"] }
html5ever = "0.39"
markup5ever = "0.39"
markup5ever_rcdom = "0.39"
tendril = "0.5"
url = "2"
# Base64 (RFC 4648 § 4) decoding of `data:` URL base64 payloads in `data_url`.
# Pure-Rust, `unsafe`-free, compatible with `#![forbid(unsafe_code)]`.
base64 = "0.22"
# Secure host randomness for the browser-shaped `crypto.getRandomValues()` /
# `crypto.randomUUID()` runtime seam.
getrandom = "0.3"

# Phase 5: the single GPU paint path. `gleam` is used only at the GL FFI
# loading boundary; all draw-command translation goes through WebRender.
gleam = "0.15.1"
webrender = "0.69.0"

# Stylo CSS engine (Phase 3, docs/PLAN.md). The `servo` feature selects the
# non-Gecko config; it brings in the web_atoms/string_cache atom sets and
# the servo-flavoured `SelectorImpl`. `selectors`, `stylo_atoms` are direct
# deps because we name them in style_dom.rs.
stylo = { version = "0.18", default-features = false, features = ["servo"] }
stylo_atoms = "0.18"
selectors = "0.38"
# Direct because `style_dom` wraps Stylo's selector parser to enable `:has()`.
# Both crates are already present through Stylo; this adds no new packages.
cssparser = "0.37"
style_traits = { package = "stylo_traits", version = "0.18", features = ["servo"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
url = "2"
