[package]
name = "vixen-ffi"
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
description = "Safe Rust controller core for Vixen foreign-language frontends"
license = "Apache-2.0"
publish = false

[dependencies]
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
serde_json = "1"
vixen-api = { path = "../vixen-api" }
vixen-engine = { path = "../vixen-engine" }

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]
