[package]
name = "vixen-ffi"
version = "0.1.6"
edition = "2024"
rust-version = "1.88"
description = "Safe Rust controller core for Vixen foreign-language frontends"
license = "Apache-2.0"
publish = false

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "time"] }
vixen-api = { path = "../vixen-api" }
vixen-cdp = { path = "../vixen-cdp" }
vixen-engine = { path = "../vixen-engine" }

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]
