# vixen-headless — CLI + CDP + EGL surfaceless render path.
# Phase 2 wires `--url`/`--eval` to vixen-engine's JS runtime seam.
# ADR-014 uses deno_core/V8 behind vixen-engine's JS runtime seam.
[package]
name = "vixen-headless"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Vixen headless CLI and CDP server"
license = "Apache-2.0"
publish = false

[dependencies]
vixen-api = { path = "../vixen-api" }
vixen-engine = { path = "../vixen-engine" }
vixen-net = { path = "../vixen-net" }
clap = { version = "4", features = ["derive"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.27"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[dev-dependencies]
tempfile = "3"
vixen-wpt = { path = "../vixen-wpt" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "vixen-headless"
path = "src/main.rs"
