# vixen-net — networking + security policy (docs/PLAN.md Phase 1 "crown
# jewels"). Pure Rust, fail-closed, fully unit-tested.
[package]
name = "vixen-net"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
description = "Vixen networking and security policy"
license = "Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# vixen-net deliberately depends on NO other vixen crate. It is a leaf
# consumed by vixen-engine (see docs/ARCHITECTURE.md "Boundary rules" and the
# `cargo tree` CI audit). Types that mirror the `vixen-api` surface (e.g.
# `PermissionKind`) are duplicated here on purpose so this crate stays
# self-contained.
url = "2"
# Generated, static Mozilla Public Suffix List, including private suffixes.
# Dual MIT/Apache-2.0; Vixen uses it under the already-allowed Apache-2.0.
psl = "2.1"
thiserror = "2"
# SHA-2 (SHA-256/384/512) for CSP `'hash-...'` source matching in `csp`.
# Pure-Rust, `unsafe`-free, compatible with `#![forbid(unsafe_code)]`.
sha2 = "0.10"
# SHA-1 (RFC 3174) for the WebSocket `Sec-WebSocket-Accept` handshake value in
# `websocket` (RFC 6455 § 4.2.2: base64(SHA1(key + GUID))). Pure-Rust,
# `unsafe`-free. Already transitively present; direct dep keeps it explicit.
sha1 = "0.10"
# Base64 (RFC 4648 § 4) decoding of CSP `'hash-...'` source values in `csp`.
# Pure-Rust, `unsafe`-free, compatible with `#![forbid(unsafe_code)]`.
base64 = "0.22"
time = { version = "0.3", default-features = false, features = ["std"] }
# reqwest client: HTTP/2 + gzip + brotli, TLS via rustls (no native-tls).
# default-features off keeps OpenSSL out of the dep tree (docs/ACCEPTANCE.md
# keeps a tight dep budget).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "http2",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "test-util"] }
