# vixen-shell — Relm4/libadwaita browser chrome (ADR-010).
#
# The GTK/libadwaita dependencies live behind the `gtk-shell` feature so the
# workspace type-checks on hosts without the GNOME SDK (docs/PLAN.md Phase 0
# gate is `cargo check --workspace`). Build the real shell with:
#
#     cargo build --features vixen-shell/gtk-shell
#
# Module layout (docs/ARCHITECTURE.md "Crate layout"):
#   app.rs browser_window.rs tabs.rs tab.rs location_entry.rs find_bar.rs
#   engine_factory.rs engine_worker.rs settings.rs profile.rs config.rs modals/
[package]
name = "vixen-shell"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Vixen Relm4/libadwaita browser chrome"
license = "Apache-2.0"
publish = false

[features]
default = []
# Pull in the GTK4/libadwaita/Relm4 stack and build the real browser window.
# Requires gtk4, libadwaita-1 dev packages (pkg-config).
gtk-shell = ["dep:gtk4", "dep:relm4", "dep:libadwaita"]

[dependencies]
vixen-api = { path = "../vixen-api" }
gtk4 = { version = "0.9", optional = true }
relm4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }

[lib]
path = "src/lib.rs"
