# vixen-wpt — WPT harness consuming the engine's inspection surface only
# (never engine internals — docs/ARCHITECTURE.md "Boundary rules").
[package]
name = "vixen-wpt"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Vixen WPT harness"
license = "Apache-2.0"
publish = false

[dependencies]
vixen-api = { path = "../vixen-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lib]
path = "src/lib.rs"
